packages/core/src/global/scrollbar-vars.scss
:root {
  --tds-scrollbar-track-color: transparent;
  --tds-scrollbar-thumb-color: var(--component-scrollbar-background-thumb-default);
  --tds-scrollbar-hover-thumb-color: var(--component-scrollbar-background-thumb-hover);
}

.tds-mode-dark {
  --tds-scrollbar-thumb-color: var(--component-scrollbar-background-thumb-default);
  --tds-scrollbar-hover-thumb-color: var(--component-scrollbar-background-thumb-hover);
}

